examples/negatives/string_indexing_negative.bl
// string indexing not supported
fun string_indexing(s:String) -> String{
    return s[0];
}

print(string_indexing("PROJECT");